# darkfi

./: .dockerignore  .envrc  .gitignore  .gitmodules  404.html  Cargo.toml  ChangeLog  DEVELOPMENT.md  IDEOLOGY.md  Makefile  README.md  TODO.md  auto-complete  ayu-highlight.css  book.js  compile_and_run.sh  darkcli.py  flake.nix  index.html  lc.file  mac_setup.sh  print.html  run_bits.sh  run_burn_zk.sh  run_jubjub.sh  run_jubjub2.sh  run_mimc.sh  run_mimc2.sh  run_mint.sh  run_mint3.sh  run_mint_contract.sh  run_mint_zk.sh  run_network.sh  run_vmtest.sh  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  start-here.html  todo.md  (+1 more)
contract/money/: Cargo.toml  Makefile
contract/money/src/: lib.rs  transfer.rs
example/dao/: Cargo.toml  Makefile  dao.rs  note.rs  util.rs
example/dao/contract/: mod.rs
example/dao/proof/: dao-exec.zk  dao-propose-main.zk  dao-vote-main.zk
example/dao/schema/: classnamespace.py  crypto.py  money.py
example/dao/src/: dao.rs  error.rs  main.rs  note.rs  util.rs
example/dao2/: .gitignore  Cargo.toml  Makefile
example/dao2/src/: error.rs  main.rs  note.rs  schema.rs  tx.rs  util.rs
example/dchat/: .gitignore  Cargo.toml  README.md  chat_config.toml  dchat_config.toml
example/dchat-seed/: Cargo.toml
example/dchat-seed/src/: main.rs
example/dchat/dchat-cli/: main.py
example/dchat/dchatd/: Cargo.toml  README.md  dchatd_config.toml
example/dchat/src/: dchat_error.rs  dchatmsg.rs  error.rs  main.rs  protocol_dchat.rs  rpc.rs  server.rs  settings.rs
example/dummy-contract/: Cargo.toml  README.md
example/dummy-contract/src/: entrypoint.rs  lib.rs  runtime.rs
example/halo2/: Cargo.toml  doit.sh  doit_burn.sh
example/halo2/src/: arith_chip.rs  endian.rs  error.rs  lib.rs  proof.rs  spec.rs  vm2.rs  vm2_serial.rs
example/p2pdebug/: Cargo.toml  tmux_sessions.sh
example/p2pdebug/src/: main.rs  rpc.rs
example/smart-contract/: .gitignore  Cargo.toml  Makefile  README.md
example/smart-contract/proof/: contract.zk
example/smart-contract/src/: lib.rs
example/smart-contract/tests/: runtime.rs
example/vm/: Cargo.toml  doit.sh
example/vm/src/: arith_chip.rs  lib.rs  serial.rs  vm2.rs
example/wasm-hello-world/: Cargo.toml  Makefile
example/wasm-hello-world/client/: .gitignore  Cargo.toml
example/wasm-hello-world/proof/: secret_commitment.zk
example/wasm-hello-world/src/: entrypoint.rs  lib.rs
examples/halo2/: Cargo.toml  README.md  simple3.rs
examples/halo2/src/: circuit.rs  constants.rs  crypto.rs  lib.rs  primitives.rs  spec.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/artifacts/decode-string/: oom-3c5bd8c3ddfc391396108f2074ce9ad25a408e01
fuzz/artifacts/zkas-decoder/: minimized-from-2126d6fc8e6c41fbdb81f884c978b115455eda34
fuzz/corpus/zkas-decoder/: corpora_outofmemory
fuzz/dictionaries/: zk-bin.dict
fuzz/fuzz_targets/: decode_string.rs  serial.rs  zkas_compile.rs  zkas_decoder.rs  zkas_lexer.rs
fuzz/honggfuzz/: .gitignore  Cargo.toml  README.md
fuzz/honggfuzz/script/: binary-to-bytearray.py  generate-binary-corpus.sh  generate-zk-corpus.sh
fuzz/honggfuzz/src/: serial_decode_string.rs  varint_differential.rs  zkas_compile.rs  zkbinary_decode.rs
fuzz/regressions/serial-decode-string/: SIGABRT.PC.7ffff7c8e83c.STACK.c8ecc5e84.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz
fuzz/regressions/zkas-compile/: SIGABRT.PC.7ffff7c8e83c.STACK.1a04d93507.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.c141956d5.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.c1946f2b4.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.c42349b85.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.c4bc6b9fe.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.cc91cf826.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.e0cde7d36.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.e39a31eee.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.e3a9a5f97.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7c8e83c.STACK.e52635a01.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz
lisp/: Cargo.toml  README.md  TODO.md  bits.lisp  core.rs  env.rs  inverse.lisp  jj.rkt  jubjub-add-macro.lisp  jubjub-add.lisp  jubjub-mul.lisp  jubjub.lisp  lib.rs  lisp.rs  macros.lisp  new-cs.lisp  new.lisp  printer.rs  run.sh  types.rs
lisp/examples/: jubjub-add-macro.lisp  jubjub.lisp  macro-test.lisp  mimc-constants.lisp  mint2.lisp  util.lisp
lisp/racket/: jj.rkt  zk.rkt
script/evgrd/: Cargo.toml  Makefile  evgrd.toml
script/evgrd/example/: recv.rs  send.rs
script/evgrd/src/: lib.rs  main.rs
script/ping/: Cargo.toml
script/ping/src/: main.rs
script/research/arti-exp/: Cargo.toml
script/research/blockchain-explorer/: .gitignore  Cargo.toml  Makefile  blockchain_explorer_config.toml  blocks.sql  transactions.sql
script/research/blockchain-storage-metrics/: Cargo.toml  blockchain_storage_metrics_config.toml
script/research/clock_sync/: Cargo.toml
script/research/consensus_headstart/: Cargo.toml
script/research/consensusd/: Cargo.toml  consensusd_config.toml
src/sdk/: Cargo.toml
src/sdk-py/: Cargo.toml  README.md
src/sdk-py/python/: make_publics.py
src/sdk-py/src/: affine.rs  base.rs  lib.rs  point.rs  proof.rs  proving_key.rs  scalar.rs  verifying_key.rs  zk_binary.rs  zk_circuit.rs
src/sdk/python/: Cargo.toml  Makefile  README.md  pyproject.toml
src/sdk/src/: blockchain.rs  dark_tree.rs  db.rs  deploy.rs  entrypoint.rs  error.rs  float10.rs  hex.rs  lib.rs  log.rs  (+4 more)
src/serial/: Cargo.toml  README.md  async_serial.rs  encoding_types.rs  endian.rs  mod.rs
zkas/: Cargo.toml  Makefile  README.md  bincode.html  examples.html  index.html  writing-zk-proofs.html  zkvm.html
zkas/examples/: sapling.html  voting.html
zkas/proofs/: burn.zk  mint.zk  voting.zk
zkas/src/: analyzer.rs  ast.rs  compiler.rs  decoder.rs  error.rs  lexer.rs  lib.rs  main.rs  opcode.rs  output.rs  parser.rs  state.rs  tracer.rs  types.rs
(+10429 files in other folders)
