[package]
name = "darkfi"
version = "0.4.1"
homepage = "https://dark.fi"
description = "Anonymous. Uncensored. Sovereign."
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "darkfi"
doctest = false
bench = false

#[profile.release]
#debug = true
#lto = "fat"
#codegen-units = 1

[workspace]
members = [
    "bin/zkas",
    "bin/darkfid",
    "bin/minerd",
    "bin/explorer/explorerd",
    "bin/darkfi-mmproxy",
    "bin/drk",
    #"bin/fud/fu",
    #"bin/fud/fud",
    "bin/genev/genevd",
    "bin/genev/genev-cli",
    "bin/darkirc",
    #"bin/darkwallet",
    "bin/tau/taud",
    "bin/vanityaddr",
    "bin/lilith",

    "src/sdk",
    "src/sdk/python",

    #"src/serial",
    #"src/serial/derive",
    #"src/serial/derive-internal",

    "src/contract/test-harness",
    "src/contract/money",
    "src/contract/dao",
    "src/contract/deployooor",

    "example/dchat/dchatd",
]

[dependencies]
# Hard dependencies
libc = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# async-runtime
async-recursion = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }

# Networking
futures-rustls = { workspace = true, features = ["logging", "tls12", "ring"], optional = true }

# Pluggable Transports
socket2 = { workspace = true, features = ["all"], optional = true }
arti-client = { workspace = true, features = ["async-std", "compression", "error_detail", "rustls", "onion-service-client", "onion-service-service"], optional = true }
tor-error = { workspace = true, optional = true }
tor-rtcompat = { workspace = true, features = ["async-std", "rustls"], optional = true }
tor-hscrypto = { workspace = true, optional = true }
tor-hsservice = { workspace = true, optional = true }
tor-proto = { workspace = true, optional = true }
tor-cell = { workspace = true, optional = true }

# TLS cert utilities
ed25519-compact = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
x509-parser = { workspace = true, features = ["validate", "verify"], optional = true }

# Encoding
bs58 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tinyjson = { workspace = true, optional = true }
httparse = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
structopt = { workspace = true, optional = true }
structopt-toml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

# Utilities
#darkfi-serial = {path = "src/serial", optional = true}
#darkfi-derive = {path = "src/serial/derive", optional = true}
darkfi-serial = { workspace = true, optional = true }
darkfi-derive = { workspace = true, optional = true }

# TODO: check chrono usage and impl our own
chrono = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"], optional = true }

# Misc
simplelog = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

# Crypto
rand = { workspace = true, optional = true }
blake3 = { workspace = true, features = ["rayon"], optional = true }
crypto_api_chachapoly = { workspace = true, optional = true }
halo2_proofs = { workspace = true, features = ["circuit-params"], optional = true }
halo2_gadgets = { workspace = true, features = ["circuit-params"], optional = true }

# Smart contract runtime
darkfi-sdk = { workspace = true, optional = true }
wasmer = {version = "6.0.0-alpha.1", features = ["singlepass"], optional = true}
wasmer-compiler-singlepass = {version = "6.0.0-alpha.1", optional = true}
wasmer-middlewares = {version = "6.0.0-alpha.1", optional = true}

# Blockchain store
sled-overlay = { workspace = true, optional = true }

# Miner
randomx = { workspace = true, optional = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
halo2_proofs = { workspace = true, features = ["dev-graph", "sanity-checks"] }
halo2_gadgets = { workspace = true }
plotters = { workspace = true }
easy-parallel = { workspace = true }
prettytable-rs = { workspace = true }
# Used for benchmarks
criterion = { workspace = true, features = ["html_reports"] }

# -----BEGIN LIBRARY FEATURES-----
[features]
async-daemonize = ["system"]

async-serial = ["darkfi-serial/async"]

async-sdk = [
    "darkfi-sdk/async",

    "async-serial",
]

blockchain = [
    "sled-overlay/serial",
    "num-bigint",

    "darkfi-serial/num-bigint",

    "tx",
    "util",
]

validator = [
    "crypto_api_chachapoly",
    "lazy_static",
    "randomx",
    "smol",

    "wasm-runtime",
]

geode = [
    "blake3",
    "futures",
    "smol",
]

event-graph = [
    "blake3",
    "num-bigint",
    "sled-overlay",
    "smol",
    "tinyjson",
    "bs58",

    "darkfi-serial",
    "darkfi-serial/collections",
    "darkfi-serial/hash",
    
    "rpc",
]

p2p-nym = []

p2p-tor = [
    "arti-client",
    "tor-hsservice",
    "tor-hscrypto",
    "tor-error",
    "tor-rtcompat",
    "tor-proto",
    "tor-cell",
]

net-defaults = [
    "async-trait",
    "ed25519-compact",
    "futures",
    "futures-rustls",
    "rcgen",
    "regex",
    "rustls-pemfile",
    "semver",
    "serde",
    "socket2",
    "structopt",
    "structopt-toml",
    "url",
    "x509-parser",

    "darkfi-serial/url",

    "async-serial",
    "system",
    "util",

    "p2p-tor",
    #"p2p-nym",
]

p2p-unix = []

net = ["net-defaults"]

rpc = [
    "async-trait",
    "httparse",

    "net",
]

system = [
    "pin-project-lite",
    "rand",
    "smol",
]

tx = [
    "blake3",
    "rand",

    "async-sdk",
    "async-serial",
    "zk",
]

util = [
    "simplelog",
    "tinyjson",

    "darkfi-serial",
]

wasm-runtime = [
    "wasmer",
    "wasmer-compiler-singlepass",
    "wasmer-middlewares",

    "darkfi-sdk/wasm",

    "blockchain",
]

zk = [
    "halo2_proofs",
    "halo2_gadgets",
    "rand",

    "async-sdk",
    "zkas",
]

zkas = [
    "darkfi-serial",
]

# Could not get this to work. Complains manifest-key is ignored.
#[target.'cfg(target_family = "unix")'.features]
#net = ["net-defaults", "p2p-unix"]
#
#[target.'cfg(target_family = "windows")'.features]
#net = ["net-defaults"]

# -----END LIBRARY FEATURES-----

[patch.crates-io]
halo2_proofs = {git="https://github.com/parazyd/halo2", branch="v4"}
halo2_gadgets = {git="https://github.com/parazyd/halo2", branch="v4"}
# Temp smol-2.0 fix
async-lock = {git="https://github.com/smol-rs/async-lock", rev="542831132f2c707aae1c380edd43452053433814"}
# Forked "url" crate with added P2P schemas
url = {git="https://github.com/darkrenaissance/rust-url", branch="main"}

[[bench]]
name = "zk_arith"
harness = false
path = "bench/zk_arith.rs"
[[bench]]
name = "zk_from_json"
harness = false
path = "bench/zk_from_json.rs"
[[bench]]
name = "sled"
harness = false
path = "bench/sled.rs"

# Crossbeam SkipMap vs Mutex protected HashMap.
# Uncomment to enable, and add the following to dev-dependencies:
#   crossbeam-skiplist = "0.1.3"
#   rand = "0.8.5"
#[[bench]]
#name = "crossbeam"
#harness = false
#path = "bench/crossbeam.rs"

# Top-level lints. Enabled optionally on a crate-level in their respective Cargo.toml files.
[workspace.lints.clippy]

[workspace.dependencies]
arg = { git = "https://github.com/parazyd/arg" }
arti-client = { version = "0.27.0", default-features = false }
async-recursion = "1.1.1"
async-trait = "0.1.86"
bcrypt = "0.17.0"
blake2b_simd = "1.0.3"
blake3 = "1.5.5"
bridgetree = "0.6.0"
bs58 = "0.5.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.39"
clap = "4.4.11"
criterion = "0.5.1"
crypto_api_chachapoly = "0.5.0"
crypto_box = "0.9.1"
ctrlc = "3.4.5"
darkfi = { path = "" }
darkfi-contract-test-harness = { path = "src/contract/test-harness" }
darkfi-derive = "0.4.2"
darkfi-sdk = { path = "src/sdk" }
darkfi-serial = "0.4.2"
darkfi_dao_contract = { path = "src/contract/dao" }
darkfi_deployooor_contract = { path = "src/contract/deployooor" }
darkfi_money_contract = { path = "src/contract/money" }
easy-parallel = "3.3.1"
ed25519-compact = "2.1.1"
futures = "0.3.31"
futures-rustls = { version = "0.26.0", default-features = false }
genevd = { path = "bin/genev/genevd" }
halo2_gadgets = "0.3.1"
halo2_proofs = "0.3.0"
hex = "0.4.3"
httparse = "1.10.0"
lazy_static = "1.5.0"
libc = "0.2.169"
log = "0.4.25"
monero = "0.21.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pasta_curves = "0.5.1"
pin-project-lite = "0.2.16"
plotters = "0.3.7"
prettytable-rs = "0.10.0"
pyo3 = "0.22.6"
rand = "0.8.5"
rand_core = "0.6.4"
randomx = { git = "https://codeberg.org/darkrenaissance/RandomX" }
rayon = "1.10.0"
rcgen = "0.12.1"
regex = "1.11.1"
rodio = { version = "0.20.1", default-features = false }
rusqlite = "0.32.1"
rustls-pemfile = "2.2.0"
semver = "1.0.25"
serde = "1.0.217"
sha2 = "0.10.8"
signal-hook = "0.3.17"
signal-hook-async-std = "0.2.2"
simplelog = "0.12.2"
sled-overlay = "0.1.6"
smol = "2.0.2"
socket2 = "0.5.8"
structopt = "0.3.26"
structopt-toml = "0.5.1"
subtle = "2.6.1"
surf = "2.3.2"
tar = "0.4.43"
tempdir = "0.3.7"
thiserror = "2.0.11"
tide = "0.17.0-beta.1"
tinyjson = "2.5.1"
toml = "0.8.20"
tor-cell = "0.27.0"
tor-error = "0.27.0"
tor-hscrypto = "0.27.0"
tor-hsservice = "0.27.0"
tor-proto = "0.27.0"
tor-rtcompat = "0.27.0"
url = "2.5.4"
wasmer = "5.0.5-rc1"
wasmer-compiler-singlepass = "5.0.5-rc1"
wasmer-middlewares = "5.0.5-rc1"
wasmparser = "0.223.0"
x509-parser = "0.17.0"
#arithmetic_side_effects = "warn"
#eq_op = "warn"
#float_cmp = "warn"
# integer_division = "warn"
#large_futures = "warn"
#large_stack_arrays = "warn"
#large_stack_frames = "warn"
#lossy_float_literal = "warn"
#manual_slice_size_calculation = "warn"
#modulo_one = "warn"
#out_of_bounds_indexing = "warn"
#overflow_check_conditional = "warn"
#recursive_format_impl = "warn"
#unchecked_duration_subtraction = "warn"
