[package]
name = "darkfi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.darkfi]
path = ".."

[dependencies.darkfi-serial]
path = "../src/serial"
features = ["derive", "semver", "collections", "crypto", "hash"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "serial"
path = "fuzz_targets/serial.rs"
test = false
doc = false
