[package]
name = "darkfi-fuzz"
version = "0.5.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"

[dependencies.darkfi]
path = ".."
features = ["zkas"]

[dependencies.darkfi-serial]
path = "../src/serial"
features = ["derive", "semver", "collections", "crypto", "hash"]

[patch.crates-io]
blake2b_simd = {git="https://github.com/parazyd/blake2_simd", branch="impl-common"}

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "serial"
path = "fuzz_targets/serial.rs"
test = false
doc = false

[[bin]]
name = "zkas-lexer"
path = "fuzz_targets/zkas_lexer.rs"
test = false
doc = false

[[bin]]
name = "zkas-decoder"
path = "fuzz_targets/zkas_decoder.rs"
test = false
doc = false

[[bin]]
name = "decode-string"
path = "fuzz_targets/decode_string.rs"
test = false
doc = false

[[bin]]
name = "zkas-compile"
path = "fuzz_targets/zkas_compile.rs"
test = false
doc = false
