[package]
name = "zklisp"
version = "0.1.0"
authors = ["mileschet"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.1"
itertools = "0.8.0"
fnv = "1.0.6"
bellman = { version = "0.8", default-features = false, features = ["groth16"] }
sapvi = { path = "../" } 

[[bin]]
name = "lisp"
path = "lisp.rs"
