[package]
name = "zkas"
version = "0.0.1"
homepage = "https://dark.fi"
authors = ["darkfi <dev@dark.fi>"]
repository = "https://github.com/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
clap = {version = "3.0.0", features = ["derive"]}
indexmap = "1.7.0"
itertools = "0.10.3"
termion = "1.5.6"
