[package]
name = "darkfi-money-contract"
version = "0.4.0"
authors = ["darkfi <dev@dark.fi>"]
license = "AGPL-3.0-only"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true

[dependencies]
darkfi-sdk = { path = "../../src/sdk" }
darkfi = { path = "../../", features = ["serial"] }
