[package]
name = "darkfi-money-contract"
version = "0.4.0"
authors = ["darkfi <dev@dark.fi>"]
license = "AGPL-3.0-only"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true

[dependencies]
darkfi-sdk = { path = "../../src/sdk" }
# TODO: serial/crypto feature that enables all this stuff
darkfi = { path = "../../", features = ["serial", "pasta_curves", "incrementalmerkletree"] }
incrementalmerkletree = "0.3.0"

# TODO: Dummy getrandomndom = { version = "0.2.7", features = ["custom"] }
getrandom = { version = "0.2.7", features = ["custom"] }
