[package]
name = "dao"
version = "0.3.0"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
edition = "2021"

[workspace]
members = [
    "contract/money",
    "contract/dao",
]

[dependencies]
dao-contract = {path = "contract/dao"}
money-contract = {path = "contract/money"}
darkfi-sdk = { path = "../../src/sdk" }
darkfi-serial = { path = "../../src/serial" }
darkfi = { path = "../../", features = ["wasm-runtime"] }
simplelog = "0.12.0"
sled = "0.34.7"
