[package]
name = "dao"
version = "0.3.0"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
edition = "2021"

[workspace]
members = [
    "contract/money",
    "contract/dao",
]

[dependencies]
dao-contract = {path = "contract/dao"}
money-contract = {path = "contract/money"}
darkfi-sdk = { path = "../../src/sdk" }
darkfi-serial = { path = "../../src/serial" }
darkfi = { path = "../../", features = ["wasm-runtime"] }
sled = "0.34.7"

# Async
smol = "1.3.0"
futures = "0.3.25"
async-std = {version = "1.12.0", features = ["attributes"]}
async-trait = "0.1.59"
async-channel = "1.8.0"
async-executor = "1.5.0"
easy-parallel = "3.2.0"

# Misc
log = "0.4.17"
num_cpus = "1.14.0"
simplelog = "0.12.0"
thiserror = "1.0.37"

# Crypto
incrementalmerkletree = "0.3.0"
pasta_curves = "0.4.1"
halo2_gadgets = "0.2.0"
halo2_proofs = "0.2.0"
rand = "0.8.5"
chacha20poly1305 = "0.10.1"
group = "0.12.1"

# Encoding and parsing
serde_json = "1.0.89"
bs58 = "0.4.0"
fxhash = "0.2.1"

# Utilities
lazy_static = "1.4.0"
url = "2.3.1"
env_logger = "0.10.0"
