[package]
name = "dchat_seed"
version = "0.1.0"
edition = "2021"
description = "Seed node for dchat"


[dependencies]
darkfi = {path = "../../", features = ["net", "rpc"]}

# Async
futures = "0.3.0"
async-std = "1"
async-executor = "1.4.1"
async-channel = "1.6.1"
easy-parallel = "3.2.0"
smol = "1.2.5"
num_cpus = "1.13.1"

#Misc
url = "2.2.2"
log = "0.4.17"
simplelog = "0.12.0"


