[package]
name = "dchat"
version = "0.4.1"
homepage = "https://dark.fi"
description = "Demo chat app used to document DarkFi networking code"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://github.com/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

# ANCHOR: darkfi
[dependencies]
darkfi = {path = "../../", features = ["net", "rpc"]}
darkfi-serial = {path = "../../src/serial"}
# ANCHOR_END: darkfi

# ANCHOR: dependencies
async-std = "1.12.0"
async-trait = "0.1.72"
easy-parallel = "3.3.0"
smol = "1.3.0"

log = "0.4.19"
simplelog = "0.12.1"
url = "2.4.0"

serde_json = "1.0.104"
serde = {version = "1.0.179", features = ["derive"]}
toml = "0.7.6"
libsqlite3-sys = {version = "0.26.0", features = ["bundled-sqlcipher-vendored-openssl"]}
# ANCHOR_END: dependencies
