[package]
name = "drk_halo2"
version = "0.1.0"
authors = ["Ivan Jelincic <parazyd@dyne.org>"]
edition = "2021"

[dependencies]
rand = "0.8.4"
ff = "0.11.0"
pasta_curves = "0.2.1"
hex = "0.4.3"
failure = "0.1.8"

[dependencies.halo2]
version = "=0.1.0-beta.1"
features = ["dev-graph", "gadget-traces", "sanity-checks"]

[dependencies.halo2_gadgets]
git = "https://github.com/parazyd/halo2_gadgets.git"
rev = "8238cb3471b798c76dd53b278524fc80685c7d4f"
features = ["dev-graph", "test-dependencies"]
