[package]
name = "drk_halo2"
version = "0.1.0"
authors = ["Ivan Jelincic <parazyd@dyne.org>"]
edition = "2021"

[workspace]

[dependencies]
rand = "0.8.4"
ff = "0.11.0"
pasta_curves = "0.2.1"
hex = "0.4.3"
failure = "0.1.8"
anyhow = "1.0.44"

[dependencies.halo2]
version = "=0.1.0-beta.1"
features = ["dev-graph", "gadget-traces", "sanity-checks"]

[dependencies.halo2_gadgets]
git = "https://github.com/parazyd/halo2_gadgets.git"
rev = "b45c527276bb2309f3b256eb5f45ccdcc5bd8c0f"
features = ["dev-graph", "test-dependencies"]
