[package]
name = "p2pdebug"
version = "0.4.1"
homepage = "https://dark.fi"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[workspace]

[dependencies]
darkfi = {path = "../../", features = ["net", "rpc"]}
# Async
smol = "2.0.0"
futures = "0.3.30"
async-std = "1.12.0"
async-trait = "0.1.81"
async-channel = "2.3.1"
async-executor = "1.12.0"
easy-parallel = "3.3.1"

# Crypto
rand = "0.8.5"

# Misc
clap = {version = "4.4.11", features = ["derive"]}
log = "0.4.22"
simplelog = "0.12.2"
fxhash = "0.2.1"
url = "2.5.2"

# Encoding and parsing
serde_json = "1.0.120"

[lints]
workspace = true

